--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -1192,6 +1192,7 @@ ul.see-all {
     margin-bottom: 15px;
     white-space: nowrap;
     overflow-x: scroll;
+    @include no-scrollbar;
     .friend-item {
         margin-top: 30px;
         margin-right: 30px;
