Added SERP page, squashed bugs, added more show data

--- a/css/home.css
+++ b/css/home.css
@@ -588,6 +588,7 @@ h4 {
 }
 
 .featured-wrapper .featured-text .featured-cta {
+  display: block;
   position: relative;
   clear: right;
   max-width: 800px;
