--- a/scss/home.scss
+++ b/scss/home.scss
@@ -175,6 +175,7 @@ h4 {
 
             }
             .featured-cta {
+                display: block;
                 position: relative;
                 clear: right;
                 max-width: 800px;
